<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_shark"
            android:title="@string/navSched"/>
        <item
            android:id="@+id/nav_classes"
            android:icon="@drawable/ic_shark"
            android:title="@string/navClasses"/>
        <item
            android:id="@+id/nav_drills"
            android:icon="@drawable/ic_shark"
            android:title="@string/navDrills"/>
        <item
            android:id="@+id/nav_bios"
            android:icon="@drawable/ic_shark"
            android:title="@string/navBios"/>
        <item
            android:id="@+id/nav_pay"
            android:icon="@drawable/ic_shark"
            android:title="@string/navPay"/>
    </group>



</menu>
